--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "bevy_log_events"
 version = "0.1.0"
 edition = "2021"
 description = "A Bevy plugin that log events"
-repository = ""
+repository = "https://github.com/YellowWaitt/bevy_log_events"
 license = "MIT OR Apache-2.0"
 keywords = ["bevy"]
 categories = ["game-development"]
