Add log_triggered prototype

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,4 @@ required-features = ["editor_window"]
 [[example]]
 name = "observers"
 path = "examples/observers.rs"
+required-features = ["editor_window"]
