--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,26 @@
 [package]
 name = "bevy_log_events"
-version = "0.3.0-dev"
+version = "0.3.0"
 edition = "2021"
 description = "A Bevy plugin that log events."
 repository = "https://github.com/YellowWaitt/bevy_log_events"
 license = "MIT OR Apache-2.0"
-keywords = ["bevy"]
+keywords = ["bevy", "log"]
 categories = ["game-development"]
 exclude = ["assets/", "examples/"]
 readme = "README.md"
 
 [features]
-default = []
+default = ["enabled"]
+enabled = ["dep:ron", "dep:serde"]
 editor_window = ["dep:bevy_editor_pls", "dep:regex"]
 
 [dependencies]
 bevy = { version = "0.14", default-features = false }
 bevy_editor_pls = { version = "0.9", optional = true }
 regex = { version = "1", optional = true }
-ron = "0.8"
-serde = "1.0"
+ron = { version = "0.8", optional = true }
+serde = { version = "1", optional = true }
 
 [dev-dependencies]
 bevy = "0.14"
