Update to bevy 0.17

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_log_events"
-version = "0.5.0"
+version = "0.6.0"
 edition = "2024"
 description = "A Bevy plugin that helps to log events."
 repository = "https://github.com/YellowWaitt/bevy_log_events"
@@ -12,16 +12,11 @@ readme = "README.md"
 
 [features]
 default = ["enabled"]
-enabled = ["dep:ron", "dep:serde", "dep:bevy_egui", "dep:regex", "dep:bitflags"]
+enabled = ["dep:ron", "dep:serde", "dep:bevy_egui", "dep:regex"]
 
 [dependencies]
-bevy = { version = "0.17", default-features = false, features = [
-    "bevy_log",
-    "bevy_state",
-    "bevy_window",
-] }
+bevy = { version = "0.17", default-features = false, features = ["bevy_log"] }
 bevy_egui = { version = "0.37", optional = true }
-bitflags = { version = "2.9", optional = true }
 regex = { version = "1", optional = true }
 ron = { version = "0.11", optional = true }
 serde = { version = "1", optional = true }
